# ParticleTracking

./: .gitignore  .gitignore.rtf  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Gui_test_ex5.1.py  Gui_test_ex5.4  Gui_test_ex5.4.py  Gui_test_ex5.5.py  Gui_test_ex5.6.py  Gui_test_ex5.7  Gui_test_ex5.7.py  README.md  hubconf.py  pyproject.toml  rods_gui.py  testQT.py
3Dreconstruction/: data_loading.py  matching.py  (+1 more)
ParticleDetection/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
ParticleDetection/base_configs/: keypoint_config.yaml  keypoint_ported_config.yaml  ported_HGS_config.yaml  rod_detection.yaml  rod_detection_PR.yaml
ParticleDetection/experiments/example/: config.yaml  experiment_detection.py
ParticleDetection/experiments/rod_detection/: train.py
ParticleDetection/experiments/scripts/: assignment_2d_test.py  camera_calibration.py  export_model.py  process_imgs.ipynb  processing_files.py  rematch_3dassigned.py  visualization_examples.py
ParticleDetection/src/ParticleDetection/: __init__.py
ParticleDetection/src/ParticleDetection/modelling/: __init__.py  annotations.py  augmentations.py  configs.py  datasets.py  detectron.py  export.py  visualization.py
ParticleDetection/src/ParticleDetection/modelling/runners/: detection.py  training.py
ParticleDetection/src/ParticleDetection/reconstruct_3D/: __init__.py  calibrate_cameras.py  match2D.py  matchND.py  tracking.py  visualization.py
ParticleDetection/src/ParticleDetection/reconstruct_3D/example_calibration/Matlab/: world_transformation_gp12.json
ParticleDetection/src/ParticleDetection/utils/: __init__.py  data_conversions.py  data_loading.py  datasets.py  detection.py  helper_funcs.py
ParticleDetection/tests/: conftest.py
ParticleDetection/tests/example_data/: gp34.json  rods_df_black.csv  rods_df_green.csv
ParticleDetection/tests/test_modelling/: test_annotations.py  test_modelling_datasets.py  test_modelling_detection.py
ParticleDetection/tests/test_reconstruct_3D/: test_calibrate_cameras.py  test_match_2d.py  test_match_nd.py  test_visualization.py
ParticleDetection/tests/test_utils/: test_data_conversions.py  test_data_loading.py  test_datasets.py  test_detection.py  test_helper_funcs.py
Python/: README.md  RodTracker.py  actionlogger.py  pyproject.toml  requirements.txt  requirements_dev.txt  rodimagewidget.py  rodnumberwidget.py  settings.py  setup.cfg  track_main.py  track_ui.py  track_ui.ui
Python/backend/: data_operations.py  file_operations.py  logger.py  parallelism.py  settings.py
Python/build-files/: build_app.sh  build_onedir.spec  build_onefile.spec
Python/resources/example_data/csv/: rods_df_purple.csv
Python/src/RodTracker/: RodTracker.py  __init__.py
Python/src/RodTracker/backend/: data_operations.py  file_locations.py  file_operations.py  img_data.py  logger.py  parallelism.py  rod_data.py  settings.py
Python/src/RodTracker/ui/: dialogs.py  loggerwidget.py  mainwindow.py  mainwindow_layout.py  mainwindow_layout.ui  rod_tree.py  rodimagewidget.py  rodnumberwidget.py  settings_setup.py  view3d.py
Python/tests/: action_assertions.py  conftest.py  gui_actions.py  mock_pyi_splash.py  test_RodTracker.py
Python/tests/test_backend/: test_file_locations.py  test_file_operations.py  test_img_data.py  test_parllelism.py  test_rod_data.py  test_settings.py
Python/tests/test_ui/: test_rodnumberwidget.py
Python/tests/test_userinteraction/: test_usecases.py  test_useractions.py
Python/ui/: dialogs.py  loggerwidget.py  mainwindow.py  mainwindow_layout.py  mainwindow_layout.ui  rodimagewidget.py  rodnumberwidget.py
RodTracker/: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
RodTracker/build-files/: RodTracker.desktop  build_app.bat  build_app.sh  build_deb.sh  build_dmg.sh  build_installer.iss  build_installer.sh  build_onedir.spec  build_onefile.spec  build_version_info.py  control  create_logo.py
RodTracker/src/RodTracker/: RodTracker.py  __init__.py  _version.py  main.py
RodTracker/src/RodTracker/backend/: data.py  detection.py  file_locations.py  img_data.py  logger.py  miscellaneous.py  parallelism.py  reconstruction.py  rod_data.py  settings.py
RodTracker/src/RodTracker/resources/: icon_macOS.icns  icon_main.icns
RodTracker/src/RodTracker/ui/: __init__.py  check_hub_model.py  detection.py  dialogs.py  dummy_model_publish.py  loggerwidget.py  mainwindow.py  mainwindow_layout.py  mainwindow_layout.ui  reconstruction.py  rod_tree.py  rodimagewidget.py  rodnumberwidget.py  settings.py  settings_setup.py  tabs.py  view3d.py
RodTracker/src/extensions/: __init__.py
RodTracker/src/extensions/detection/: __init__.py  detection.py  detection_ui.py  detection_ui.ui  requirements.txt
RodTracker/src/extensions/detection/__pyinstaller/: hook-extensions.detection.py
RodTracker/src/extensions/example_extension/: README.md  __init__.py  requirements.txt
RodTracker/src/extensions/example_extension/__pyinstaller/: hook-extensions.example_extension.py
RodTracker/src/extensions/example_extension/example_data/: README.md
RodTracker/src/extensions/rods/: __init__.py  actions.py  data.py  dialogs.py  display_tab.py  rod_tree.py  rods.py
RodTracker/src/extensions/rods/__pyinstaller/: hook-extensions.rods.py
RodTracker/src/extensions/rods_3D/: __init__.py  requirements.txt  view3d.py
RodTracker/src/extensions/rods_3D/__pyinstaller/: hook-extensions.rods_3D.py
RodTracker/src/extensions/rods_reconstruction/: __init__.py  reconstruction.py  reconstruction_ui.py  reconstruction_ui.ui  requirements.txt
RodTracker/src/extensions/rods_reconstruction/__pyinstaller/: hook-extensions.rods_reconstruction.py
RodTracker/tests/: action_assertions.py  conftest.py  gui_actions.py  manual_testing.md  test_RodTracker.py
RodTracker/tests/test_backend/: test_detection.py  test_file_locations.py  test_img_data.py  test_parllelism.py  test_reconstruction.py  test_rod_data.py  test_settings.py
RodTracker/tests/test_ui/: test_rodnumberwidget.py
RodTracker/tests/test_userinteraction/: test_usecases.py  test_useractions.py
(+195 files in other folders)
