[metadata]
name = RodTracker
description = GUI to track rod like particles on multiple cameras
version = 0.0.1
author = Adrian Niemann, Dmitry Puzyrev
license = GPLv3
license_file = ../LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    RodTracker
install_requires = 
    PyQt5>=5.15.4
    pandas>=1.2.5
    numpy>=1.21.0
python_requires = >=3.8
package_dir = 
    =src
zip_safe = no

[options.entry_points]
console_scripts = 
    RodTracker = RodTracker.RodTracker:main
