[metadata]
name = RodTracker
description = GUI to track rod like particles on multiple cameras
long_description = file: README.md
version = 0.5.4
author = Adrian Niemann, Dmitry Puzyrev
license = GPLv3
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires = 
    PyQt5>=5.15.4
    pandas>=1.2.5
    numpy>=1.21.0
    importlib-resources>=1.4; python_version < '3.9'
    PyQt3D>=5.15.5
    matplotlib>=3.6.2
python_requires = >=3.8
package_dir = 
    =src
packages=find_namespace:
zip_safe = no

[options.extras_require]
dev = 
    pyinstaller>=4.5.1
    qt5-applications>=5.15.2
    flake8>=5
test = pytest

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    RodTracker = RodTracker.RodTracker:main

[options.package_data]
RodTracker.resources = 
    *.png
    *.ico
RodTracker.resources.example_data.csv = 
    *.csv
RodTracker.resources.example_data.images.gp3 =
    *.jpg
RodTracker.resources.example_data.images.gp4 =
    *.jpg

[flake8]
ignore = W504
per-file-ignores = 
    src/RodTracker/backend/data_operations.py: W605
exclude =
    __pycache__,
    build,
    dist,
    src/RodTracker/ui/mainwindow_layout.py