[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "RodTracker"
description = "GUI to track rod-like particles on multiple cameras"
readme = "README.md"
version = "0.0.0"
authors = [
    "Adrian Niemann <adrian.niemann@gmx.de>",
    "Dmitry Puzyrev <dmitry.puzyrev@ovgu.de>"
]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
documentation = "https://particletracking.readthedocs.io/"
repository = "https://github.com/ANP-Granular/ParticleTracking"
packages = [
    {include = "RodTracker", from = "src"},
]
include = [
    {path = "src/RodTracker/resources"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
importlib-resources = {version = "^6.0"}
matplotlib = [
    {version = ">=3.6.2", python = ">=3.9"},
    {version = ">=3.6.2,<3.8", python ="<3.9"}
]
numpy = [
    {version = ">=1.21", python = ">=3.9"},
    {version = ">=1.21,<=1.25", python = "<3.9"}
]
pandas= [
    {version = ">=2.1.1", python = ">=3.9"},
    {version = ">=1.2.5,<2.1", python = "<3.9"}
]
ParticleDetection = [
    {git = "https://github.com/ANP-Granular/ParticleTracking.git", subdirectory = "ParticleDetection", rev = "110f20d", extras=["cpu"], markers = "extra != 'gpu'"},
    {git = "https://github.com/ANP-Granular/ParticleTracking.git", subdirectory = "ParticleDetection", rev = "110f20d", extras=["gpu"], markers = "extra == 'gpu'"},
]
platformdirs = ">=3.2.0"
PyQt3D = ">=5.15.5"
PyQt5 = ">=5.15.4"

docutils = {version = ">=0.18", optional = true}
dunamai = {version=">=1.18.0", optional = true}
flake8 = {version = ">=5", optional = true}
myst_parser = {version = ">=2", optional = true}
Pillow = {version=">=10", optional = true}
pyinstaller = {version = ">=6.0", optional = true}
PyQt5-stubs = {version = ">=5.15", optional = true}
pytest = {version = ">=7.1.2", optional = true}
pytest-cov = {version = ">=3.0.0", optional = true}
pytest-qt = {version = ">=4.0.0", optional = true}
qt5-applications = {version = ">=5.15", optional = true}
Sphinx = [
    {version = ">=7.2", python = ">=3.9", optional = true},
    {version = ">=7.1,<7.2", python="<3.9", optional = true},
]
sphinx_rtd_theme = {version = ">=1.3", optional = true}

[tool.poetry.extras]
dev = ["qt5-applications", "PyQt5-stubs", "flake8", "pytest", "pytest-qt",
       "pytest-cov", "pyinstaller", "Sphinx", "docutils", "sphinx_rtd_theme",
       "myst_parser", "dunamai", "Pillow"]
build = ["pyinstaller", "Sphinx", "docutils", "sphinx_rtd_theme",
         "myst_parser", "dunamai"]
test = ["pytest", "pytest-qt", "pytest-cov"]
docs = ["Sphinx", "docutils", "sphinx_rtd_theme", "myst_parser", "dunamai"]
# keep this: force installing pytorch with GPU support (default is CPU only)
gpu = []

[tool.poetry.scripts]
RodTracker = 'RodTracker.RodTracker:main'

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"
testpaths = [
    "tests/",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
